// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when rendering a list table with fixed widths renders correctly 1`] = `
<DocumentFragment>
  .emotion-36 {
  position: relative;
  max-width: 100%;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
}

.emotion-20 * {
  border: 0 !important;
  min-height: unset !important;
  padding: 0 !important;
}

.emotion-0 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  left: 0;
}

.emotion-0:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-0:after {
  right: 100%;
  box-shadow: 4px 0 4px rgba(6,22,33,0.3);
}

.emotion-1 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  right: 0;
}

.emotion-1:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-1:after {
  left: 100%;
  box-shadow: -4px 0 4px rgba(6,22,33,0.3);
}

.emotion-35 {
  overflow-x: auto;
}

.emotion-34 {
  border-collapse: collapse;
  box-sizing: border-box;
  width: 100%;
  border-bottom: 1px solid #E7EEEC;
}

.emotion-2 {
  padding-right: 4px;
  color: #3D4F58;
}

.emotion-22 {
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  line-height: 20px;
  position: relative;
  overflow-wrap: anywhere;
  word-break: break-word;
  vertical-align: top;
}

.emotion-22 * {
  font-size: 14px !important;
}

.emotion-22 > div > span > * {
  margin: 0 0 12px;
}

.emotion-22 > div > span > *:last-child {
  margin-bottom: 0;
}

.emotion-33 {
  border-top: 1px solid #E7EEEC;
  color: #3D4F58;
}

.emotion-33 > td > [data-leafygreen-ui="td-inner-div"] {
  min-height: 40px;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
}

.emotion-33 > td:nth-child(1) {
  padding-left: 8px;
}

.emotion-33 td:nth-child(1) > div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-33 td:nth-child(2) > div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-33 td:nth-child(3) > div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-33 td:nth-child(4) > div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-33 td:nth-child(5) > div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-33 td:nth-child(6) > div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-4 {
  border-width: 0px 1px 3px 1px;
  border-style: solid;
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  border-color: #E7EEEC;
  width: 5%;
}

.emotion-4 * {
  font-size: 14px;
}

.emotion-7 {
  border-width: 0px 1px 3px 1px;
  border-style: solid;
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  border-color: #E7EEEC;
  width: 10%;
}

.emotion-7 * {
  font-size: 14px;
}

.emotion-10 {
  border-width: 0px 1px 3px 1px;
  border-style: solid;
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  border-color: #E7EEEC;
  width: 15%;
}

.emotion-10 * {
  font-size: 14px;
}

.emotion-13 {
  border-width: 0px 1px 3px 1px;
  border-style: solid;
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  border-color: #E7EEEC;
  width: 20%;
}

.emotion-13 * {
  font-size: 14px;
}

.emotion-16 {
  border-width: 0px 1px 3px 1px;
  border-style: solid;
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  border-color: #E7EEEC;
  width: 30%;
}

.emotion-16 * {
  font-size: 14px;
}

<div
    class="emotion-36"
  >
    <div
      class="emotion-0"
    />
    <div
      class="emotion-1"
    />
    <div
      class="emotion-35"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="emotion-34"
      >
        <thead>
          <tr
            class="emotion-20"
            data-testid="leafygreen-ui-header-row"
          >
            <th
              aria-sort="none"
              class="emotion-4"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-3"
              >
                <span
                  class="emotion-2"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-7"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-3"
              >
                <span
                  class="emotion-2"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-10"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-3"
              >
                <span
                  class="emotion-2"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-13"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-3"
              >
                <span
                  class="emotion-2"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-16"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-3"
              >
                <span
                  class="emotion-2"
                />
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-13"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-3"
              >
                <span
                  class="emotion-2"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            aria-disabled="false"
            class="emotion-33"
            role="row"
          >
            <td
              class="emotion-22"
            >
              <div
                class="emotion-21"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  notebook
                </span>
              </div>
            </td>
            <td
              class="emotion-22"
            >
              <div
                class="emotion-21"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  50
                </span>
              </div>
            </td>
            <td
              class="emotion-22"
            >
              <div
                class="emotion-21"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  8.5x11,in
                </span>
              </div>
            </td>
            <td
              class="emotion-22"
            >
              <div
                class="emotion-21"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  A
                </span>
              </div>
            </td>
            <td
              class="emotion-22"
            >
              <div
                class="emotion-21"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  college-ruled,perforated
                </span>
              </div>
            </td>
            <td
              class="emotion-22"
            >
              <div
                class="emotion-21"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  8
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`when rendering a list-table directive renders correctly 1`] = `
<DocumentFragment>
  .emotion-87 {
  position: relative;
  max-width: 100%;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
}

.emotion-0 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  left: 0;
}

.emotion-0:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-0:after {
  right: 100%;
  box-shadow: 4px 0 4px rgba(6,22,33,0.3);
}

.emotion-1 {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  overflow: hidden;
  pointer-events: none;
  right: 0;
}

.emotion-1:after {
  opacity: 0;
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  width: 16px;
  border-radius: 100%;
  -webkit-transition: opacity 150ms ease-in-out;
  transition: opacity 150ms ease-in-out;
}

.emotion-1:after {
  left: 100%;
  box-shadow: -4px 0 4px rgba(6,22,33,0.3);
}

.emotion-86 {
  overflow-x: auto;
}

.emotion-85 {
  border-collapse: collapse;
  box-sizing: border-box;
  width: 100%;
  border-bottom: 1px solid #E7EEEC;
}

.emotion-4 {
  border-width: 0px 1px 3px 1px;
  border-style: solid;
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  border-color: #E7EEEC;
}

.emotion-4 * {
  font-size: 14px;
}

.emotion-2 {
  padding-right: 4px;
  color: #3D4F58;
}

.emotion-21 {
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  line-height: 20px;
  position: relative;
  font-weight: bold;
  overflow-wrap: anywhere;
  word-break: break-word;
  vertical-align: top;
  background-clip: padding-box;
  background-color: #F9FBFA;
}

.emotion-21 * {
  font-size: 14px !important;
}

.emotion-21 > div > span > * {
  margin: 0 0 12px;
}

.emotion-21 > div > span > *:last-child {
  margin-bottom: 0;
}

.emotion-23 {
  min-width: 40px;
  padding: 8px 8px;
  box-sizing: border-box;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  line-height: 20px;
  position: relative;
  overflow-wrap: anywhere;
  word-break: break-word;
  vertical-align: top;
}

.emotion-23 * {
  font-size: 14px !important;
}

.emotion-23 > div > span > * {
  margin: 0 0 12px;
}

.emotion-23 > div > span > *:last-child {
  margin-bottom: 0;
}

.emotion-32 {
  border-top: 1px solid #E7EEEC;
  color: #3D4F58;
}

.emotion-32 > td > [data-leafygreen-ui="td-inner-div"] {
  min-height: 40px;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
}

.emotion-32 > td:nth-child(1) {
  padding-left: 8px;
}

.emotion-32 td:nth-child(1) > div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-32 td:nth-child(2) > div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-32 td:nth-child(3) > div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-32 td:nth-child(4) > div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-32 td:nth-child(5) > div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-32 td:nth-child(6) > div {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

<div
    class="emotion-87"
  >
    <div
      class="emotion-0"
    />
    <div
      class="emotion-1"
    />
    <div
      class="emotion-86"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="emotion-85"
      >
        <thead>
          <tr
            class=""
            data-testid="leafygreen-ui-header-row"
          >
            <th
              aria-sort="none"
              class="emotion-4"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-3"
              >
                <span
                  class="emotion-2"
                >
                  name
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-4"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-3"
              >
                <span
                  class="emotion-2"
                >
                  quantity
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-4"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-3"
              >
                <span
                  class="emotion-2"
                >
                  size
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-4"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-3"
              >
                <span
                  class="emotion-2"
                >
                  status
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-4"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-3"
              >
                <span
                  class="emotion-2"
                >
                  tags
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="emotion-4"
              role="columnheader"
              scope="col"
            >
              <div
                class="emotion-3"
              >
                <span
                  class="emotion-2"
                >
                  rating
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            aria-disabled="false"
            class="emotion-32"
            role="row"
          >
            <th
              class="emotion-21"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  journal
                </span>
              </div>
            </th>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  25
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  14x21,cm
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  A
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  brown, lined
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  9
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-32"
            role="row"
          >
            <th
              class="emotion-21"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  notebook
                </span>
              </div>
            </th>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  50
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  8.5x11,in
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  A
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  college-ruled,perforated
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  8
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-32"
            role="row"
          >
            <th
              class="emotion-21"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  paper
                </span>
              </div>
            </th>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  100
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  8.5x11,in
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  D
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  watercolor
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  10
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-32"
            role="row"
          >
            <th
              class="emotion-21"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  planner
                </span>
              </div>
            </th>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  75
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  22.85x30,cm
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  D
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  2019
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  10
                </span>
              </div>
            </td>
          </tr>
          <tr
            aria-disabled="false"
            class="emotion-32"
            role="row"
          >
            <th
              class="emotion-21"
              role="rowheader"
              scope="row"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  postcard
                </span>
              </div>
            </th>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  45
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  10x,cm
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  D
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  double-sided,white
                </span>
              </div>
            </td>
            <td
              class="emotion-23"
            >
              <div
                class="emotion-20"
                data-leafygreen-ui="td-inner-div"
              >
                <span>
                  2
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
